Translate to spanish profile and fix bug where expenses were not showing

--- a/app/assets/stylesheets/pages/_profiles.scss
+++ b/app/assets/stylesheets/pages/_profiles.scss
@@ -57,10 +57,10 @@
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
 
-.circle-shopping { color: #00ABE7; }
+.circle-compras { color: #00ABE7; }
 
-.circle-pets { color: #FF707A; }
+.circle-mascotas { color: #FF707A; }
 
-.circle-utilities{ color: #E9CD72; }
+.circle-servicios{ color: #E9CD72; }
 
-.circle-others { color: #D39CD3; }
+.circle-otros { color: #D39CD3; }
